--- a/WpfDemo/WpfDemo.csproj
+++ b/WpfDemo/WpfDemo.csproj
@@ -10,6 +10,11 @@
   <ItemGroup>
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="MessageBroker\" />
   </ItemGroup>
 
 </Project>
